--- a/styles/play.css
+++ b/styles/play.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  outline: 1px solid yellow;
 }
 #centerBox .nameArea {
   padding-left: 50px;
@@ -34,6 +35,42 @@
   text-decoration: none;
 }
 
+@media only screen and (max-width: 1700px) {
+  #centerBox {
+    width: calc((100% - 17rem) / 2);
+  }
+  #centerBox div header .nameArea {
+    font-size: 54px;
+  }
+}
+@media only screen and (max-width: 1450px) {
+  #centerBox {
+    width: calc(100% - 17rem);
+  }
+  #centerBox div header .nameArea {
+    font-size: 54px;
+  }
+  #centerBox div .aboutArea {
+    font-size: 12px;
+  }
+  #rightBox {
+    opacity: 0;
+  }
+}
+@media only screen and (max-width: 1050px) {
+  #centerBox {
+    width: calc(100% - 17rem);
+  }
+  #centerBox div header .nameArea {
+    font-size: 50px;
+  }
+  #centerBox div .aboutArea {
+    font-size: 12px;
+  }
+  #rightBox {
+    opacity: 0;
+  }
+}
 #rightBox {
   height: 100vh;
   width: calc((100% - 17rem) / 2);
