--- a/styles/resume.css
+++ b/styles/resume.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-body {
+.main_container {
   font-family: "SF UI Text", "Helvetica Neue", "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", sans-serif;
 }
 
