--- a/styles/resume.scss
+++ b/styles/resume.scss
@@ -8,7 +8,7 @@ $fontFamily: "SF UI Text", "Helvetica Neue", "Segoe UI", "Oxygen", "Ubuntu", "Ca
 
 // overall
 
-body {
+.main_container {
 	font-family: $fontFamily;
 }
 
