--- a/styles/play.css
+++ b/styles/play.css
@@ -54,7 +54,7 @@
     font-size: 12px;
   }
   #rightBox {
-    opacity: 0;
+    display: none !important;
   }
 }
 @media only screen and (max-width: 1050px) {
@@ -62,13 +62,41 @@
     width: calc(100% - 17rem);
   }
   #centerBox div header .nameArea {
-    font-size: 50px;
+    font-size: 54px;
   }
   #centerBox div .aboutArea {
     font-size: 12px;
   }
   #rightBox {
-    opacity: 0;
+    display: none !important;
+  }
+}
+@media only screen and (max-width: 805px) {
+  #centerBox {
+    width: calc(100% - 17rem);
+  }
+  #centerBox div header .nameArea {
+    font-size: 40px;
+  }
+  #centerBox div .aboutArea {
+    font-size: 12px;
+  }
+  #rightBox {
+    display: none !important;
+  }
+}
+@media only screen and (max-width: 660px) {
+  #centerBox {
+    width: calc(100% - 17rem);
+  }
+  #centerBox div header .nameArea {
+    font-size: 28px;
+  }
+  #centerBox div .aboutArea {
+    font-size: 12px;
+  }
+  #rightBox {
+    display: none !important;
   }
 }
 #rightBox {
