--- a/styles/_presets.scss
+++ b/styles/_presets.scss
@@ -12,7 +12,7 @@ $SecBorder: 1px solid grey;
 $trans: 0.4s;
 $primeColor: rgb(189, 211, 175);
 $secondColor: rgb(0, 0, 230);
-$thirdColor: rgb(182, 182, 212);
+$thirdColor: aliceblue;
 $fourthColor: rgb(135, 106, 99);
 $fifthColor: rgb(212, 175, 165);
 $fontFamily: "SF UI Text", "Helvetica Neue", "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", sans-serif;
