--- a/styles/skills-rotate.css
+++ b/styles/skills-rotate.css
@@ -170,8 +170,4 @@ li:nth-child(11) .card {
   opacity: 0.25;
   box-shadow: 0px 18px 36px -18px rgba(12, 5, 46, 0.3), 0px 30px 60px -12px rgba(12, 5, 46, 0.25);
   border-radius: 50%;
-}
-
-/* .crop {
-	-webkit-mask-image: linear-gradient(270deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 1));
-} *//*# sourceMappingURL=skills-rotate.css.map */
+}/*# sourceMappingURL=skills-rotate.css.map */
