--- a/styles/skills-rotate.scss
+++ b/styles/skills-rotate.scss
@@ -159,6 +159,6 @@ $circleColor: $fourthColor;
 	box-shadow: 0px 18px 36px -18px rgba(12, 5, 46, 0.3), 0px 30px 60px -12px rgba(12, 5, 46, 0.25);
 	border-radius: 50%;
 }
-/* .crop {
-	-webkit-mask-image: linear-gradient(270deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 1));
-} */
+// .crop {
+// 	-webkit-mask-image: linear-gradient(270deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 1));
+// }
