--- a/styles/play.css
+++ b/styles/play.css
@@ -1,15 +1,18 @@
 #centerBox {
   height: 100vh;
-  width: calc((100% - 17rem) / 2);
+  width: calc((100% - 17rem) / 2 * 1.2);
   left: 17rem;
   position: fixed;
   top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  outline: 1px solid yellow;
+  overflow-y: auto;
 }
-#centerBox .nameArea {
+#centerBox .nameArea,
+#centerBox .nameAreaContact,
+#centerBox .contactTop,
+#centerBox .contactBottom {
   padding-left: 50px;
   margin: 0;
   margin-bottom: 20px;
@@ -19,32 +22,14 @@
   font-weight: 700;
 }
 #centerBox .nameAreaContact {
-  padding-left: 50px;
-  margin: 0;
   margin-bottom: 0px;
-  color: rgb(189, 211, 175);
-  font-size: 65px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700;
 }
 #centerBox .contactTop {
-  padding-left: 50px;
-  margin: 0;
   margin-bottom: -20px;
-  color: rgb(189, 211, 175);
-  font-size: 65px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700;
   font-weight: 100;
 }
 #centerBox .contactBottom {
-  padding-left: 50px;
-  margin: 0;
   margin-bottom: 20px;
-  color: rgb(189, 211, 175);
-  font-size: 65px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700;
 }
 #centerBox .aboutArea {
   padding-left: 80px;
@@ -137,68 +122,35 @@
   background-color: blue;
 }
 
-@media only screen and (max-width: 1700px) {
-  #centerBox {
-    width: calc((100% - 17rem) / 2);
-  }
+@media only screen and (max-width: 1430px) {
   #centerBox div header .nameArea {
-    font-size: 54px;
+    font-size: 63px;
   }
 }
-@media only screen and (max-width: 1450px) {
+@media only screen and (max-width: 1400px) {
   #centerBox {
     width: calc(100% - 17rem);
-  }
-  #centerBox div header .nameArea {
-    font-size: 54px;
-  }
-  #centerBox div .aboutArea {
-    font-size: 12px;
   }
   #rightBox {
     display: none !important;
   }
 }
-@media only screen and (max-width: 1050px) {
-  #centerBox {
-    width: calc(100% - 17rem);
-  }
-  #centerBox div header .nameArea {
-    font-size: 54px;
-  }
-  #centerBox div .aboutArea {
-    font-size: 12px;
-  }
-  #rightBox {
-    display: none !important;
-  }
-}
-@media only screen and (max-width: 805px) {
-  #centerBox {
-    width: calc(100% - 17rem);
-  }
+@media only screen and (max-width: 925px) {
   #centerBox div header .nameArea {
     font-size: 40px;
   }
   #centerBox div .aboutArea {
     font-size: 12px;
   }
-  #rightBox {
-    display: none !important;
-  }
 }
 @media only screen and (max-width: 660px) {
-  #centerBox {
-    width: calc(100% - 17rem);
-  }
   #centerBox div header .nameArea {
     font-size: 28px;
   }
-  #centerBox div .aboutArea {
-    font-size: 12px;
-  }
-  #rightBox {
-    display: none !important;
+}
+@media only screen and (max-width: 525px) {
+  #centerBox div header .nameArea {
+    font-size: 25px;
   }
 }
 #rightBox {
