--- a/styles/skills-rotate.scss
+++ b/styles/skills-rotate.scss
@@ -7,21 +7,22 @@
 }
 
 .void {
-	width: 200%;
-	/* max-width: 1024px;
-    margin: auto; */
+	width: 100%;
+	max-width: 1024px;
+	// margin: auto;
 	position: relative;
-	aspect-ratio: 1 / 1;
-	right: -435px;
+	// aspect-ratio: 1 / 1;
+	transform: translateX(50%);
 }
-#card-list:hover * {
-	animation-play-state: paused;
-}
+// #card-list:hover * {
+// 	animation-play-state: paused;
+// }
 #card-list {
 	list-style-type: none;
 	/* margin: 0; */
 	padding: 0;
 	position: relative;
+	// change width: 120%; for inner circle
 	width: 120%;
 	aspect-ratio: 1 / 1;
 	/* outline: 2px dotted magenta; */
@@ -31,39 +32,46 @@
 .cards-all {
 	position: absolute;
 	top: 50%;
-	transform: translateY(-50%);
+	// transform: translateY(-50%);
 	/* 	outline: 2px dashed cyan; */
-	width: 120%;
-	left: -200px;
+	// WAS:: width: 120%;
+	width: 105%;
+	// WAS:: left: -140px;
+	left: -18%;
 	animation: rotateCW calc(var(--rotate-speed) * 1s) var(--easing) infinite;
 }
+
 .card {
-	width: 27%;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
+	width: 8%;
+	// display: flex;
+	// flex-direction: column;
+	// align-items: flex-start;
 	padding: 16px 24px;
-	gap: 8px;
-	background: $secondColor;
-	box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1), 0px 16px 32px rgba(0, 0, 0, 0.1);
-	border-radius: 12px;
-	font-family: "Inter", sans-serif;
-	font-style: normal;
-	font-weight: 600;
-	font-size: 12px;
-	line-height: 100%;
-	text-decoration: none;
-	color: $thirdColor;
+	// gap: 8px;
+	// background: $secondColor;
+	// box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1), 0px 16px 32px rgba(0, 0, 0, 0.1);
+	// border-radius: 12px;
+	// font-family: "Inter", sans-serif;
+	// font-style: normal;
+	// font-weight: 600;
+	// font-size: 12px;
+	// line-height: 100%;
+	// text-decoration: none;
+	// color: $thirdColor;
 	animation: rotateCCW calc(var(--rotate-speed) * 1s) var(--easing) infinite;
 }
 
-.model-name {
-	font-weight: 700;
-	font-size: 18px;
-	line-height: 150%;
-	color: $primeColor;
-	display: block;
+.imgRotate {
+	border-radius: 90%;
 }
+
+// .model-name {
+// 	font-weight: 700;
+// 	font-size: 18px;
+// 	line-height: 150%;
+// 	color: $primeColor;
+// 	display: block;
+// }
 
 li:nth-child(2),
 li:nth-child(2) .card {
@@ -106,58 +114,60 @@ li:nth-child(11) .card {
 	animation-delay: calc((var(--rotate-speed) / var(--count)) * -10s);
 }
 
+// to change direction:
+// swap rotate(TOP) and rotate(BOTTOM) in both rotateCW && rotateCCW
 @keyframes rotateCW {
 	from {
-		transform: translate3d(0px, -50%, -1px) rotate(-230deg);
+		// transform: translate3d(0px, -50%, -1px) rotate(-230deg);
+		transform: translate3d(0px, 0%, -1px) rotate(-200deg);
 	}
 	to {
-		transform: translate3d(0px, -50%, 0px) rotate(-500deg);
+		transform: translate3d(0px, -100%, 0px) rotate(-500deg);
 	}
 }
 @keyframes rotateCCW {
 	from {
-		transform: rotate(230deg);
+		// transform: rotate(230deg);
+		transform: rotate(200deg);
 	}
 	to {
 		transform: rotate(500deg);
 	}
 }
+
 $circleColor: $fourthColor;
-.center-circle {
-	position: absolute;
-	width: 55%;
-	aspect-ratio: 1 / 1;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-	background: $circleColor;
-	opacity: 0.75;
-	box-shadow: 0px 18px 36px -18px rgba(12, 5, 46, 0.3), 0px 30px 60px -12px rgba(12, 5, 46, 0.25);
-	border-radius: 50%;
-}
-.second-circle {
-	position: absolute;
-	width: 85%;
-	aspect-ratio: 1 / 1;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-	background: $circleColor;
-	opacity: 0.5;
-	box-shadow: 0px 18px 36px -18px rgba(12, 5, 46, 0.3), 0px 30px 60px -12px rgba(12, 5, 46, 0.25);
-	border-radius: 50%;
-}
+.center-circle,
+.second-circle,
 .last-circle {
 	position: absolute;
-	width: 66%;
 	aspect-ratio: 1 / 1;
-	left: 50%;
+	left: 35%;
 	top: 50%;
 	transform: translate(-50%, -50%);
-	background: $circleColor;
-	opacity: 0.25;
 	box-shadow: 0px 18px 36px -18px rgba(12, 5, 46, 0.3), 0px 30px 60px -12px rgba(12, 5, 46, 0.25);
-	border-radius: 50%;
+}
+.center-circle {
+	width: 55%;
+	height: 50%;
+	background: $circleColor;
+	opacity: 0.75;
+	background-image: url("/images/Me.jpg");
+	background-position: 10%;
+	background-size: cover;
+	background-repeat: no-repeat;
+	border-radius: 50% 0% 0% 50%;
+}
+.second-circle {
+	width: 84%;
+	background: $circleColor;
+	opacity: 0.5;
+	border-radius: 50% 0% 0% 50%;
+}
+.last-circle {
+	width: 115%;
+	background: #50413e;
+	opacity: 1;
+	border-radius: 50% 0% 0% 50%;
 }
 // .crop {
 // 	-webkit-mask-image: linear-gradient(270deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 1));
