--- a/TEMP_DELETE/playground.css
+++ b/TEMP_DELETE/playground.css
@@ -1,230 +1,127 @@
 html {
-	font-size: 62.5%;
-	min-width: 320px;
+  font-size: 62.5%;
+  min-width: 320px;
 }
+
 body {
-	/* font-size: 1.6rem;
-	line-height: 1.5; */
-	background: #1d1d1d;
-	/* display: block;
-	min-width: 320px;
-	font-family: "Open Sans", sans-serif;
-	color: #fff;
-	padding-left: 13rem;
-	overflow-y: scroll;
-	overflow-x: hidden; */
+  margin: 0px;
 }
 
-/* .logo {
-	padding-bottom: 10px;
-	height: 40px;
-	width: 120px;
-	background-image: url(/images/KMLogo.svg);
-	background-repeat: no-repeat;
-	margin: auto;
-	z-index: 1;
-} */
-/* .trapezium {
-	width: 10rem;
-	background-color: #1d1d1d;
-	position: fixed;
-	left: 0;
-	top: 0;
-	right: auto;
-	bottom: 0;
-	display: flex;
-	z-index: 2;
-	-ms-flex-direction: column;
-	flex-direction: column;
-	-webkit-box-pack: justify;
-	-ms-flex-pack: justify;
-	justify-content: space-between;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
-	margin: 0;
-	padding: 0;
-	border-bottom: 100vh solid #181818;
-	border-left: 10rem solid transparent;
-	border-right: 0px solid transparent;
-	transform: rotate(180deg);
-} */
-
-.main-menu {
-	width: 13rem;
-	background-color: #181818;
-	height: 100vh;
-	position: fixed;
-	left: 0;
-	top: 0;
-	right: auto;
-	bottom: 0;
-	/* display: -webkit-box;
-	display: -ms-flexbox; */
-	display: flex;
-	z-index: 3;
-	/* -webkit-box-orient: vertical; */
-	/* -webkit-box-direction: normal; */
-	-ms-flex-direction: column;
-	flex-direction: column;
-	-webkit-box-pack: justify;
-	-ms-flex-pack: justify;
-	justify-content: space-between;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
-	margin: 0;
-	padding: 0;
+.card {
+  aspect-ratio: 5/7;
+  background-color: rgba(255, 255, 255, 0.05);
+  position: absolute;
 }
 
-/* .main-menu__top > span {
-	font-family: "Open Sans";
-	color: #a5a5a5;
-	font-size: 1.2rem;
-	margin-top: 1rem;
-} */
-.logo {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-ms-flex-direction: column;
-	flex-direction: column;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
-}
-.logo div {
-	width: 6rem;
-	height: auto;
-	padding-bottom: 10px;
-	height: 40px;
-	width: 120px;
-	background-image: url(/images/KMLogo.svg);
-	background-repeat: no-repeat;
-	margin: auto;
-	z-index: 1;
+.big-card {
+  width: 30vmin;
+  border-radius: 1vmin;
 }
 
-.logo span {
-	font-family: font-file-82132;
-	color: #fff;
-	margin-top: 1px;
-	font-size: 2.7rem;
+.little-card {
+  width: 12vmin;
+  border-radius: 2vmin;
 }
-.main-menu_nav {
-	width: 100%;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-ms-flex-direction: column;
-	flex-direction: column;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
-	border-top: 1px solid #282828;
-}
-.main-menu_nav a {
-	text-align: center;
-	width: 100%;
-	display: block;
-	font-size: 1.6rem;
-	color: #909096;
-	line-height: 5rem;
-	border-bottom: 1px solid #282828;
-	-webkit-transition: color 0.3s, background-color 0.3s;
-	-o-transition: color 0.3s, background-color 0.3s;
-	transition: color 0.3s, background-color 0.3s;
-}
-.main-menu_nav a:hover {
-	color: #08fdd8;
-}
-.main-menu_nav a.active {
-	color: #08fdd8;
-	background-color: #000000;
-}
-.social {
-	color: #909096;
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-ms-flex-wrap: wrap;
-	flex-wrap: wrap;
-	height: 20rem;
-}
-.social li {
-	text-align: center;
-}
-.social li a {
-	padding: 2rem 7px;
-}
-.social li a:hover svg path {
-	fill: #08fdd8;
-}
-.social svg {
-	width: 1.5rem;
-}
-.social svg.fa-facebook-f {
-	width: 1rem;
-}
-.social svg path {
-	-webkit-transition: fill 0.3s;
-	-o-transition: fill 0.3s;
-	transition: fill 0.3s;
-	fill: #909096;
-}
-.mbtn {
-	display: none;
+
+.leftBox {
+  width: 26rem;
+  background-color: #181818;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: auto;
+  bottom: 0;
+  /* display: -webkit-box;
+  display: -ms-flexbox; */
+  display: flex;
+  z-index: 3;
+  /* -webkit-box-orient: vertical; */
+  /* -webkit-box-direction: normal; */
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
 .slider {
-	color: #978b90;
-	font-size: 20px;
-	text-align: center;
-	animation: slider 10s linear infinite;
+  color: #978b90;
+  font-size: 20px;
+  text-align: center;
+  animation: slider 10s linear infinite;
 }
 
 @keyframes slider {
-	0% {
-		margin-top: -19px;
-	}
-	10% {
-		margin-top: -19px;
-	}
-	16% {
-		margin-top: -42px;
-	}
-	35% {
-		margin-top: -42px;
-	}
-	41% {
-		margin-top: -65px;
-	}
-	60% {
-		margin-top: -65px;
-	}
-	66% {
-		margin-top: -88px;
-	}
-	85% {
-		margin-top: -88px;
-	}
-	91% {
-		margin-top: -111px;
-	}
-	100% {
-		margin-top: -111px;
-	}
+  0% {
+    margin-top: -19px;
+  }
+  10% {
+    margin-top: -19px;
+  }
+  16% {
+    margin-top: -42px;
+  }
+  35% {
+    margin-top: -42px;
+  }
+  41% {
+    margin-top: -65px;
+  }
+  60% {
+    margin-top: -65px;
+  }
+  66% {
+    margin-top: -88px;
+  }
+  85% {
+    margin-top: -88px;
+  }
+  91% {
+    margin-top: -111px;
+  }
+  100% {
+    margin-top: -111px;
+  }
 }
+.logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo div {
+  width: 6rem;
+  height: auto;
+  padding-bottom: 10px;
+  height: 40px;
+  width: 120px;
+  background-image: url(/images/KMLogo.svg);
+  background-repeat: no-repeat;
+  margin: auto;
+  z-index: 1;
+}
+
+.logo span {
+  font-family: font-file-82132;
+  color: #fff;
+  margin-top: 1px;
+  font-size: 2.7rem;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.title .titleWrapper {
+  height: 20px;
+  overflow: hidden;
+}
+.title .titleWrapper .titleItem {
+  line-height: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}/*# sourceMappingURL=playground.css.map */
