--- a/styles/_leftBox.scss
+++ b/styles/_leftBox.scss
@@ -6,22 +6,22 @@
 @import "./_presets";
 @import "./centerBox";
 
-html {
-	font-size: 62.5%;
-	min-width: 320px;
-}
-body {
-	font-size: 1.6rem;
-	line-height: 1.5;
-	background: #1d1d1d;
-	display: block;
-	min-width: 320px;
-	font-family: "Open Sans", sans-serif;
-	color: #fff;
-	padding-left: 13rem;
-	overflow-y: scroll;
-	overflow-x: hidden;
-}
+// html {
+// 	font-size: 62.5%;
+// 	min-width: 320px;
+// }
+// body {
+// 	font-size: 1.6rem;
+// 	line-height: 1.5;
+// 	background: #1d1d1d;
+// 	display: block;
+// 	min-width: 320px;
+// 	font-family: "Open Sans", sans-serif;
+// 	color: #fff;
+// 	padding-left: 13rem;
+// 	overflow-y: scroll;
+// 	overflow-x: hidden;
+// }
 
 .leftBox {
 	width: $leftWidth;
