--- a/src/include/leftBox-include.html
+++ b/src/include/leftBox-include.html
@@ -26,7 +26,7 @@
         <a class="myWork" href="./myWork.html">My Work</a>
         <a class="contact" href="./contact.html">Contact</a>
         <a class="resume" href="./resume.html">Resume</a>
-        <a class="playground current-page" href="./playground.html">Playground</a>
+        <a class="playground" href="./playground.html">Playground</a>
     </nav>
 
     <ul class="social">
