--- a/styles/resume.scss
+++ b/styles/resume.scss
@@ -2,6 +2,10 @@
 
 // overall
 
+::-webkit-scrollbar {
+	display: none;
+}
+
 .main_container {
 	font-family: $fontFamily;
 }
@@ -54,7 +58,7 @@
 	display: block;
 	position: relative;
 	width: 80%;
-	// outline: 1px solid coral; // co.ral COntainer
+	height: 100%;
 	margin-top: 55px;
 	margin-left: calc(32rem + 6%);
 	margin-right: 6%;
@@ -199,6 +203,7 @@ article > header > h2 {
 article h2,
 article h3 {
 	color: $fifthColor;
+	margin: 0;
 }
 
 span {
@@ -213,4 +218,27 @@ article ul {
 .points {
 	list-style: square;
 	padding-left: 40px;
+}
+
+#bot-li {
+	padding-bottom: 55px;
+}
+
+ul {
+	li {
+		hr {
+			opacity: 0.3;
+			margin-top: 0;
+			margin-bottom: 1em;
+		}
+	}
+}
+
+@media only screen and (max-width: 1200px) {
+	.left_container {
+		display: none;
+	}
+	.rightContainer {
+		margin-left: 5rem;
+	}
 }
