--- a/styles/skills-rotate.css
+++ b/styles/skills-rotate.css
@@ -122,6 +122,8 @@ li:nth-child(11) .card {
 .center-circle {
   width: 55%;
   height: 50%;
+  display: block;
+  right: 100%;
   background: rgb(135, 106, 99);
   opacity: 0.75;
   background-image: url("/images/Me.jpg");
