--- a/styles/resume.css
+++ b/styles/resume.css
@@ -223,4 +223,52 @@ ul li hr {
   .rightContainer {
     margin-left: 5rem;
   }
+}
+@media only screen and (max-width: 1000px) {
+  #name {
+    color: rgb(189, 211, 175);
+    font-size: 8rem;
+    line-height: 70px;
+  }
+  article > header > h2 {
+    color: rgb(135, 106, 99);
+    font-size: 2.5rem;
+  }
+  article p {
+    max-width: 70%;
+    color: aliceblue;
+    font-size: 1.8rem;
+  }
+}
+@media only screen and (max-width: 900px) {
+  #name {
+    color: rgb(189, 211, 175);
+    font-size: 7rem;
+    line-height: 60px;
+  }
+  article > header > h2 {
+    color: rgb(135, 106, 99);
+    font-size: 2rem;
+  }
+  article p {
+    max-width: 70%;
+    color: aliceblue;
+    font-size: 1.6rem;
+  }
+}
+@media only screen and (max-width: 600px) {
+  #name {
+    color: rgb(189, 211, 175);
+    font-size: 5rem;
+    line-height: 45px;
+  }
+  article > header > h2 {
+    color: rgb(135, 106, 99);
+    font-size: 2rem;
+  }
+  article p {
+    max-width: 70%;
+    color: aliceblue;
+    font-size: 1.6rem;
+  }
 }/*# sourceMappingURL=resume.css.map */
