--- a/styles/resume.scss
+++ b/styles/resume.scss
@@ -242,3 +242,53 @@ ul {
 		margin-left: 5rem;
 	}
 }
+
+@media only screen and (max-width: 1000px) {
+	#name {
+		color: $primeColor;
+		font-size: 8rem;
+		line-height: 70px;
+	}
+	article > header > h2 {
+		color: $fourthColor;
+		font-size: 2.5rem;
+	}
+	article p {
+		max-width: 70%;
+		color: $thirdColor;
+		font-size: 1.8rem;
+	}
+}
+@media only screen and (max-width: 900px) {
+	#name {
+		color: $primeColor;
+		font-size: 7rem;
+		line-height: 60px;
+	}
+	article > header > h2 {
+		color: $fourthColor;
+		font-size: 2rem;
+	}
+	article p {
+		max-width: 70%;
+		color: $thirdColor;
+		font-size: 1.6rem;
+	}
+}
+
+@media only screen and (max-width: 600px) {
+	#name {
+		color: $primeColor;
+		font-size: 5rem;
+		line-height: 45px;
+	}
+	article > header > h2 {
+		color: $fourthColor;
+		font-size: 2rem;
+	}
+	article p {
+		max-width: 70%;
+		color: $thirdColor;
+		font-size: 1.6rem;
+	}
+}
