--- a/styles/skills-rotate.css
+++ b/styles/skills-rotate.css
@@ -126,7 +126,7 @@ li:nth-child(11) .card {
   right: 100%;
   background: rgb(135, 106, 99);
   opacity: 0.75;
-  background-image: url("/images/Me.jpg");
+  background-image: url("../images/Me.jpg");
   background-position: 10%;
   background-size: cover;
   background-repeat: no-repeat;
