--- a/styles/skills-rotate.scss
+++ b/styles/skills-rotate.scss
@@ -153,7 +153,7 @@ $circleColor: $fourthColor;
 	right: 100%;
 	background: $circleColor;
 	opacity: 0.75;
-	background-image: url("/images/Me.jpg");
+	background-image: url("../images/Me.jpg");
 	background-position: 10%;
 	background-size: cover;
 	background-repeat: no-repeat;
