--- a/styles/index-master.scss
+++ b/styles/index-master.scss
@@ -1,4 +1,4 @@
-@import "styles/presets";
+@import "presets";
 // general
 // * {
 //     outline: 1px solid red;
@@ -30,8 +30,8 @@ p {
 }
 
 // styleing
-@import "styles/leftBox";
-@import "styles/centerBox";
-@import "styles/tokens";
-@import "styles/background";
-@import "styles/rightBox";
+@import "leftBox";
+@import "centerBox";
+@import "tokens";
+@import "background";
+@import "rightBox";
