--- a/styles/index-master.scss
+++ b/styles/index-master.scss
@@ -33,5 +33,5 @@ p {
 @import "leftBox";
 @import "centerBox";
 @import "tokens";
-@import "background";
+@import "background.scss";
 @import "rightBox";
