--- a/styles/background.scss
+++ b/styles/background.scss
@@ -18,7 +18,7 @@
 		min-height: 100%;
 		max-height: 100%;
 		width: 700%;
-		background-image: url(/images/BG-Lines.svg);
+		background-image: url(../images/BG-Lines.svg);
 		background-position: center bottom;
 		animation: animatedLines 1500s linear infinite;
 		opacity: 0.3;
@@ -35,7 +35,7 @@
 		min-height: 100%;
 		max-height: 100%;
 		width: 700%;
-		background-image: url(/images/BG-Squares.svg);
+		background-image: url(../images/BG-Squares.svg);
 		background-position: center bottom;
 		animation: animatedSquares 1200s linear infinite;
 		opacity: 0.2;
