--- a/styles/index-master.css
+++ b/styles/index-master.css
@@ -1,29 +1,4 @@
-html {
-  overflow-y: hidden; /* Hide vertical scrollbar */
-  overflow-x: hidden; /* Hide horizontal scrollbar */
-  font-size: 62.5%;
-  min-width: 320px;
-}
-
-body {
-  background-color: #1d1d1d;
-  margin: 0;
-  font-size: 1.6rem;
-  line-height: 1.5;
-  background: #1d1d1d;
-  display: block;
-  min-width: 320px;
-  font-family: "Open Sans", sans-serif;
-  color: #fff;
-  padding-left: 13rem;
-  overflow-y: hidden;
-  overflow-x: hidden;
-}
-
-p {
-  margin-top: 0;
-}
-
+@import "background.css";
 #centerBox {
   height: 100vh;
   width: calc((100% - 17rem) / 2 * 1.2);
@@ -581,72 +556,6 @@ p {
   box-shadow: -20px 50px 20px rgba(0, 0, 0, 0.2);
 }
 
-.bg {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: -30;
-  opacity: 0.3;
-}
-.bg:after {
-  content: "";
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  min-height: 100%;
-  max-height: 100%;
-  width: 700%;
-  background-image: url(/images/BG-Lines.svg);
-  background-position: center bottom;
-  animation: animatedLines 1500s linear infinite;
-  opacity: 0.3;
-  position: absolute;
-  z-index: -3;
-}
-.bg:before {
-  content: "";
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  min-height: 100%;
-  max-height: 100%;
-  width: 700%;
-  background-image: url(/images/BG-Squares.svg);
-  background-position: center bottom;
-  animation: animatedSquares 1200s linear infinite;
-  opacity: 0.2;
-  position: absolute;
-  z-index: -3;
-}
-
-@keyframes animatedSquares {
-  0% {
-    background-position: 0 100%;
-  }
-  50% {
-    background-position: 100% 100%;
-  }
-  100% {
-    background-position: 0% 100%;
-  }
-}
-@keyframes animatedLines {
-  0% {
-    background-position: 100% 100%;
-  }
-  50% {
-    background-position: 0% 100%;
-  }
-  100% {
-    background-position: 100% 100%;
-  }
-}
 #rightBox {
   height: 100vh;
   width: calc((100% - 17rem) / 2);
@@ -739,4 +648,30 @@ p {
 #rightBox #contact-wrapper hr {
   width: 100%;
   margin: 0;
+}
+
+html {
+  overflow-y: hidden; /* Hide vertical scrollbar */
+  overflow-x: hidden; /* Hide horizontal scrollbar */
+  font-size: 62.5%;
+  min-width: 320px;
+}
+
+body {
+  background-color: #1d1d1d;
+  margin: 0;
+  font-size: 1.6rem;
+  line-height: 1.5;
+  background: #1d1d1d;
+  display: block;
+  min-width: 320px;
+  font-family: "Open Sans", sans-serif;
+  color: #fff;
+  padding-left: 13rem;
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+
+p {
+  margin-top: 0;
 }/*# sourceMappingURL=index-master.css.map */
