--- a/styles/index-master.scss
+++ b/styles/index-master.scss
@@ -1,4 +1,10 @@
 @import "presets";
+// styleing
+@import "leftBox";
+@import "centerBox";
+@import "tokens";
+@import "background.css";
+@import "rightBox";
 // general
 // * {
 //     outline: 1px solid red;
@@ -28,10 +34,3 @@ body {
 p {
 	margin-top: 0;
 }
-
-// styleing
-@import "leftBox";
-@import "centerBox";
-@import "tokens";
-@import "background.scss";
-@import "rightBox";
