--- a/styles/index-master.scss
+++ b/styles/index-master.scss
@@ -3,7 +3,7 @@
 @import "leftBox";
 @import "centerBox";
 @import "tokens";
-@import "background.css";
+@import "background";
 @import "rightBox";
 // general
 // * {
