--- a/styles/myWork.scss
+++ b/styles/myWork.scss
@@ -1,4 +1,4 @@
-@import "./presets";
+@import "presets";
 
 html {
 	box-sizing: content-box;
@@ -67,6 +67,6 @@ img {
 	top: 0;
 	left: 0;
 	z-index: 1;
-	background-image: url("empty.gif");
+	// background-image: url("empty.gif");
 }
 /*# sourceMappingURL=myWork.css.map */
