--- a/styles/index-master.scss
+++ b/styles/index-master.scss
@@ -3,8 +3,8 @@
 @import "background";
 @import "leftBox";
 @import "centerBox";
-@import "tokens";
 @import "rightBox";
+// @import "tokens";
 // general
 // * {
 //     outline: 1px solid red;
