--- a/styles/resume.scss
+++ b/styles/resume.scss
@@ -20,7 +20,7 @@
 }
 
 .main_container {
-	border: 1px solid coral; // co.ral COntainer
+	// border: 1px solid coral; // co.ral COntainer
 	height: 100vh;
 	width: calc(100vw - 17.5rem);
 	left: 17rem;
