--- a/src/include/leftBox-include.html
+++ b/src/include/leftBox-include.html
@@ -22,11 +22,11 @@
         </div>
     </div>
     <nav class="leftBox_nav">
-        <a class="aboutMe" href="./index.html">About Me</a>
-        <a class="myWork" href="./myWork.html">My Work</a>
-        <a class="contact" href="./contact.html">Contact</a>
-        <a class="resume" href="./resume.html">Resume</a>
-        <a class="playground" href="./playground.html">Playground</a>
+        <a class="aboutMe" href="index.html">About Me</a>
+        <a class="myWork" href="myWork.html">My Work</a>
+        <a class="contact" href="contact.html">Contact</a>
+        <a class="resume" href="resume.html">Resume</a>
+        <a class="playground" href="playground.html">Playground</a>
     </nav>
 
     <ul class="social">
